# clinica-pydra-freesurfer

./: .editorconfig  .gitignore  Makefile  README.md  hatch.toml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml  lint.yml  publish.yaml  release.yaml  test.yaml  test.yml
docs/: api.rst  conf.py  index.rst
pydra/tasks/freesurfer/: __init__.py  gtmseg.py  mri_aparc2aseg.py  mri_binarize.py  mri_convert.py  mri_label2vol.py  mri_surf2surf.py  mri_vol2vol.py  mris_anatomical_stats.py  mris_ca_label.py  mris_ca_train.py  mris_expand.py  mris_preproc.py  recon_all.py  specs.py  tkregister2.py
pydra/tasks/freesurfer/recon_all/: __init__.py  base_recon_all.py  long_recon_all.py  recon_all.py  specs.py
pydra/tasks/freesurfer/recon_all/tests/: test_base_recon_all.py  test_specs.py
pydra/tasks/freesurfer/tests/: test_recon_all.py
src/pydra/tasks/freesurfer/: __init__.py  gtmseg.py  mri_aparc2aseg.py  mri_binarize.py  mri_surf2surf.py  mris_anatomical_stats.py  mris_expand.py  mris_preproc.py  specs.py  tkregister2.py
src/pydra/tasks/freesurfer/mri/: __init__.py  aparc2aseg.py  binarize.py  convert.py  coreg.py  label2vol.py  robust_register.py  robust_template.py  surf2surf.py  vol2vol.py
src/pydra/tasks/freesurfer/mris/: __init__.py  anatomical_stats.py  ca_label.py  ca_train.py  expand.py  preproc.py
src/pydra/tasks/freesurfer/recon_all/: __init__.py  base_recon_all.py  long_recon_all.py  recon_all.py  specs.py
src/pydra/tasks/freesurfer/recon_all/tests/: test_long_recon_all.py  test_recon_all.py  test_specs.py
