[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydra-freesurfer"
version = "0.0.10"
description = "Pydra tasks for FreeSurfer"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = [
  "pydra",
  "freesurfer",
  "neuroimaging",
]
authors = [
  {name = "Ghislain Vaillant", email = "ghislain.vaillant@icm-institute.org"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydra >=0.21",
]

[project.urls]
documentation = "https://aramis-lab.github.io/pydra-freesurfer"
issues = "https://github.com/aramis-lab/pydra-freesurfer/issues"
repository = "https://github.com/aramis-lab/pydra-freesurfer"

[tool.hatch.build.targets.wheel]
only-include = ["pydra/tasks/freesurfer"]

[tool.black]
extend-exclude = ["docs"]

[tool.codespell]
quiet-level = 3
skip = ".git"

[tool.isort]
profile = "black"
atomic = true
extend_skip = ["docs"]
src_paths = ["pydra"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
testpaths = ["pydra"]
