[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydra-freesurfer"
version = "0.0.11"
description = "Pydra tasks for FreeSurfer"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = [
  "pydra",
  "freesurfer",
  "neuroimaging",
]
authors = [
  {name = "Ghislain Vaillant", email = "ghislain.vaillant@icm-institute.org"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "attrs >=22.1.0",
  "pydra >=0.21",
]

[project.urls]
Documentation = "https://aramis-lab.github.io/pydra-freesurfer"
Issues = "https://github.com/aramis-lab/pydra-freesurfer/issues"
Repository = "https://github.com/aramis-lab/pydra-freesurfer"

[tool.black]
target-version = ["py37"]
line-length = 120

[tool.codespell]
quiet-level = 3

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
