[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinica-pydra-freesurfer"
version = "0.1.0"
description = "Pydra tasks for FreeSurfer designed for Clinica"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = [
  "pydra",
  "freesurfer",
  "neuroimaging",
]
authors = [
  {name = "Ghislain Vaillant", email = "ghislain.vaillant@inria.fr"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "attrs >=22.1.0",
  "pydra >=0.21",
]

[project.urls]
Documentation = "https://aramis-lab.github.io/clinica-pydra-freesurfer"
Issues = "https://github.com/aramis-lab/clinica-pydra-freesurfer/issues"
Repository = "https://github.com/aramis-lab/clinica-pydra-freesurfer"

[tool.hatch.build.targets.wheel]
only-include = ["src/pydra/tasks/freesurfer"]
sources = ["src"]

[tool.hatch.envs.default]
dependencies = ["pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args}"

[[tool.hatch.envs.default.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.docs]
template = "docs"
dependencies = [
  "pydata-sphinx-theme >=0.13",
  "sphinx <7",
  "sphinx-autobuild",
  "sphinx-pyproject",
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build docs docs/_build/html -b {args:html}"
serve = "sphinx-autobuild docs docs/_build/html {args}"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
pythonpath = ["src"]
testpaths = ["src"]

[tool.ruff.lint]
ignore = ["FA"]

[tool.ruff.lint.extend-per-file-ignores]
"docs/conf.py" = ["INP001", "A001"]
